# vision-template

./: LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
scripts/: build.py
src/orgname/template/app/: __init__.py  __main__.py  app.py  main.py
src/orgname/template/app/configs/: TemplateApp.conf.yaml
src/orgname/template/configs/default/orgname.template/: app.TemplateApp.conf.yaml
src/orgname/template/plugins/: main_window.py
src/orgname/template/plugins/images/: icons.qrc  icons_rc.py
